# autodev

./: .gitignore  AGENTS.md  README.en.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: tests.yml
autodev/: __init__.py  arbitrator.py  checklists.py  cli.py  codex_io.py  constants.py  context.py  dev.py  git_tools.py  logging_utils.py  merge.py  orchestrator.py  plan.py  review.py  runner.py
docs/: README.md
docs/agents/: change-policy.md  engineering.md  evals.md  index.md  runbook.md  spec.md
docs/arch/: architecture.md  index.md
docs/code-style/: README.md  python.md
docs/highlights/: ochestrator.md
docs/plans/: README.md
docs/review/: index.md
scripts/: check_test_gates.py
tests/: test_basic_modules.py  test_codex_patched_command.py  test_orchestrator_and_cli.py
