[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autodev"
version = "0.1.0"
description = "Automated development workflow orchestrator (plan-dev-review-arbitration loop)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "click>=8.1.0",
  "loguru>=0.7.0",
]

[project.scripts]
autodev = "autodev.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["autodev*"]
